<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:key="description" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/running_mode_entries"
        android:entryValues="@array/running_mode_entryValues"
        android:key="running_mode"
        android:title="@string/running_mode" />

    <com.iacn.falsebattery.MultiClickCheckBoxPreference
        android:key="battery_disguise"
        android:title="@string/battery_disguise" />

    <PreferenceCategory
        android:key="advanced_function_category"
        android:title="@string/advanced_function">

        <Preference
            android:summary="@string/none_value"
            android:title="@string/real_battery" />

        <com.iacn.falsebattery.MultiClickCheckBoxPreference
            android:key="dynamic_battery_disguise"
            android:title="@string/dynamic_battery_disguise" />

    </PreferenceCategory>

</PreferenceScreen>